--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -13,21 +13,19 @@
   <div class="page-carousel">
     <div class="carousel">
       <div class="iconsandarrows">
-        <div class="leftarrow"><i class="fas fa-angle-left"></i></div>
-        <div class="icons"><img class="pokemon" src="images/001.png"> </div>
-        <div class="rightarrow"><i class="fas fa-angle-right"></i></div>
+        <div class="leftarrow" id="leftarrow" ><i class="fas fa-angle-left"></i></div>
+        <div class="icons"><img id="pokemon" alt="001.png" src="images/001.png"> </div>
+        <div class="rightarrow" id="rightarrow" ><i class="fas fa-angle-right"></i></div>
       </div>
       <div class="dots">
-        <div class="dot1"><i class="fas fa-circle"></i></div>
-        <div class="dot2"><i class="far fa-circle"></i></div>
-        <div class="dot3"><i class="far fa-circle"></i></div>
-        <div class="dot4"><i class="far fa-circle"></i></div>
-        <div class="dot5"><i class="far fa-circle"></i></div>
+        <i id = "0" class="fas fa-circle"></i>
+        <i id = "1" class="far fa-circle"></i>
+        <i id = "2" class="far fa-circle"></i>
+        <i id = "3" class="far fa-circle"></i>
+        <i id = "4" class="far fa-circle"></i>
       </div>
     </div>
   </div>
-
-
 
   <script src="main.js"></script>
 </body>
