--- a/es6-const-let/index.html
+++ b/es6-const-let/index.html
@@ -41,9 +41,9 @@
     }
     addToGreetings('namaste', greetings);
     logAllGreetings(greetings);
-
+    let variable = 'meow';
     console.log('This variable is currently undefined due to hoisting, please fix: ', variable);
-    var variable = 'meow';
+
   </script>
 </body>
 </html>
